--- a/src/App.scss
+++ b/src/App.scss
@@ -3952,6 +3952,77 @@ footer {
           font-size: .8rem;
           height: 50px;
           margin-top: 5px;
+
+          .chart-button {
+            position: relative;
+            width: 74px;
+            height: 36px;
+            margin: -20px auto 0;
+            overflow: hidden;
+            border-radius: 100px;
+
+            .knobs {
+              position: absolute;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              left: 0;
+              z-index: 2;
+            }
+
+            .layer {
+              @extend %knobs;
+              width: 100%;
+              background-color: #4c75f210;
+              transition: 0.3s ease all;
+              z-index: 1;
+              border-radius: 100px;
+            }
+
+            .checkbox {
+              position: relative;
+              width: 100%;
+              height: 100%;
+              padding: 0;
+              margin: 0;
+              opacity: 0;
+              cursor: pointer;
+              z-index: 3;
+            }
+          }
+
+          #chart-button {
+            .knobs:before {
+              content: '';
+              position: absolute;
+              top: 4px;
+              left: 4px;
+              width: 20px;
+              height: 10px;
+              color: #fff;
+              font-size: 10px;
+              font-weight: bold;
+              text-align: center;
+              line-height: 1;
+              padding: 9px 4px;
+              background-color: #4c75f2;
+              border-radius: 50%;
+              transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+            }
+
+            .checkbox:checked + .knobs:before {
+              content: '';
+              left: 42px;
+              background-color: #f44336;
+            }
+
+            .checkbox:checked ~ .layer {
+              background-color: #f4433610;
+            }
+
+           .knobs:before, #button .layer {
+              transition: 0.3s ease all;
+            }
         }
       }
     }
